<resources>
    <string name="app_name">My Little Pokemons</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="stats"><u>Stats</u></string>
    <string name="speed">Speed:</string>
    <string name="special_defense">Special Defense:</string>
    <string name="special_attack">Special Attack:</string>
    <string name="defense">Defense:</string>
    <string name="attack">Attack:</string>
    <string name="health">Health:</string>
</resources>