<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ImageView
        android:id="@+id/pokemon_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_name"
        tools:src="@drawable/_1" />

    <TextView
        android:id="@+id/pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Bulbasaur" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/height"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/pokemon_image"
        app:layout_constraintTop_toTopOf="@+id/pokemon_image" />

    <TextView
        android:id="@+id/height_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/height"
        app:layout_constraintTop_toTopOf="@+id/height"
        tools:text="7" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/weight"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/weight_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/weight"
        app:layout_constraintTop_toTopOf="@+id/weight"
        tools:text="69" />

    <TextView
        android:id="@+id/typesValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        tools:text="Grass, Poison"/>

    <TextView
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_image" />

    <TextView
        android:id="@+id/hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/health"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/stats"
        app:layout_constraintTop_toBottomOf="@+id/stats" />

    <TextView
        android:id="@+id/hp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/hp"
        app:layout_constraintTop_toTopOf="@+id/hp"
        tools:text="99" />

    <TextView
        android:id="@+id/attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/attack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/hp"
        app:layout_constraintTop_toBottomOf="@+id/hp" />

    <TextView
        android:id="@+id/attack_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/attack"
        app:layout_constraintTop_toTopOf="@+id/attack"
        tools:text="99" />

    <TextView
        android:id="@+id/defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/defense"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/attack"
        app:layout_constraintTop_toBottomOf="@+id/attack" />

    <TextView
        android:id="@+id/defense_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/defense"
        app:layout_constraintTop_toTopOf="@+id/defense"
        tools:text="99" />

    <TextView
        android:id="@+id/special_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/special_attack"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/defense_value"
        app:layout_constraintTop_toTopOf="@+id/attack" />

    <TextView
        android:id="@+id/special_attack_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/special_attack"
        app:layout_constraintTop_toTopOf="@+id/special_attack"
        tools:text="99" />

    <TextView
        android:id="@+id/special_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/special_defense"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/defense_value"
        app:layout_constraintTop_toTopOf="@+id/defense" />

    <TextView
        android:id="@+id/special_defense_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/special_defense"
        app:layout_constraintTop_toTopOf="@+id/special_defense"
        tools:text="99" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/speed"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/defense_value"
        app:layout_constraintTop_toTopOf="@+id/hp" />

    <TextView
        android:id="@+id/speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/speed"
        app:layout_constraintTop_toTopOf="@+id/speed"
        tools:text="99" />

    <ImageView
        android:id="@+id/special_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/pokemon_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pokemon_image"
        tools:src="@drawable/grass_icon"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>